p2/confs/k3s-apps/manifests/path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-path-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app-one
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app-two
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-three
            port:
              number: 80
